--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,7 @@ html(lang="en")
     link(rel="stylesheet", href="styles/bootstrap/init.css")
     link(rel="stylesheet", href="styles/prettify.css")
     link(rel="stylesheet", href="styles/init.css")
-    script(data-main="scripts/test.js", type="text/javascript", src="scripts/vendor/require-jquery.js")
+    script(data-main="scripts/drawduino.js", type="text/javascript", src="scripts/vendor/require-jquery.js")
     script(type="text/javascript", src="http://localhost:8090/socket.io/socket.io.js")
   body
     .navbar.navbar-fixed-top(style="z-index: 4;position:absolute;")
@@ -14,46 +14,14 @@ html(lang="en")
           div.nav-collapse
             ul.nav
               li
-<<<<<<< HEAD
-                a(href="#") Gallery
-              li
-                a(href="#") Create
-              li
-                a(href="#") About
-=======
                 a(href="/") Gallery
               li
                 a(href="/create") Create
               li
                 a(href="/about") About
->>>>>>> site-restructure
             div.nav-collapse.pull-right
               ul.nav
                 li
                   a(href="http://www.leftfieldlabs.com") LFL
-<<<<<<< HEAD
+
      .container!=body
-      footer.footer
-        p.pull-right
-          a(href="#") Back to top
-        p.pull-left
-          a(href="http://arduino.cc")
-            img(src="images/arduino.jpg", style="position: relative; margin-right: 18px; top: 5px; margin-left: 4px; border-radius: 3px;")
-        p The
-          a(href="https://semu.github.com/noduino") noduino
-          |  project was founded in 2012 and is maintained by
-          a(href="http://semu.mp") Sebastian Müller
-          | .
-        p All Noduino code is licensed under the
-          a(href="http://www.opensource.org/licenses/mit-license.php") MIT License
-          |  and available on
-          a(href="https://github.com/semu/noduino") GitHub
-          |  for free.
-        p Icons from
-          a(href="http://glyphicons.com/") Glyphicons Free
-          | . Layout based on
-          a(href="http://twitter.github.com/bootstrap/") twitter bootstrap framework
-          | .
-=======
-    .container!=body
->>>>>>> site-restructure
