App.js passes drawdruino.js dependency to create.jade.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,10 @@ html(lang="en")
     link(rel="stylesheet", href="styles/bootstrap/init.css")
     link(rel="stylesheet", href="styles/prettify.css")
     link(rel="stylesheet", href="styles/init.css")
-    script(data-main="scripts/drawduino.js", type="text/javascript", src="scripts/vendor/require-jquery.js")
+    // Dynamically include template-defined scripts.
+    if ( typeof( scripts ) != 'undefined' )
+      each script in scripts
+        script(data-main="scripts/#{script}", type="text/javascript", src="scripts/vendor/require-jquery.js")
     script(type="text/javascript", src="http://localhost:8090/socket.io/socket.io.js")
   body
     .navbar.navbar-fixed-top(style="z-index: 4;position:absolute;")
@@ -24,4 +27,6 @@ html(lang="en")
                 li
                   a(href="http://www.leftfieldlabs.com") LFL
 
-     .container!=body
+    .nameDiv
+    |  nameOfEmma
+    .container!=body
