control drawing with two potentiometers

--- a/views/create.jade
+++ b/views/create.jade
@@ -34,5 +34,8 @@ header
         code scripts/libs/
         | .
   .row
-    #pot-value
-      p Hello
+    #pot-value-left
+      p Left
+  .row
+    #pot-value-right
+      p Right
