--- a/views/create.jade
+++ b/views/create.jade
@@ -1,11 +1,19 @@
 header
   .page-header
     h1 Draw something
+
   .row.debug
     .span12
       pre#connection-log
         .item $ > Not connected to noduino!
 
+.row.interface#controls
+    .span12
+      .btn-toolbar(style="margin-bottom: 9px")
+        .btn-group
+          a.btn(href="javascript:void(0)")#erase
+            i.icon-refresh
+            |  Start over
   canvas#etchasketch
   .row
     .span12
@@ -20,3 +28,9 @@ header
         |  in
         code scripts/libs/
         | .
+  .row
+    #pot-value-left
+      p Left
+  .row
+    #pot-value-right
+      p Right
