Cleaned out old images. Added turtle indicator.

--- a/public/styles/init.less
+++ b/public/styles/init.less
@@ -766,10 +766,7 @@ form.well {
 body {
 position: relative;
 padding-top: 90px;
-background-color: white;
-background-image: url(../images/grid-18px-masked.png);
-background-repeat: repeat-x;
-background-position: 0 40px; }
+background-color: white; }
 .jumbotron {
   position: relative;
 }
@@ -842,4 +839,12 @@ label.label { display: inline; }
   padding-top: 4px;
   overflow-x: hidden;
   margin-bottom: 16px;
+}
+
+#turtle {
+  position: absolute;
+  z-index: 100;
+  width: 9px;
+  height: 9px;
+  background-image: url( '../images/turtle.png' );
 }
