--- a/views/create.jade
+++ b/views/create.jade
@@ -7,7 +7,7 @@ header
       pre#connection-log
         .item $ > Not connected to noduino!
 
-.row.interface#controls
+  .row.interface#controls
     .span12
       .btn-toolbar(style="margin-bottom: 9px")
         .btn-group
@@ -15,22 +15,4 @@ header
             i.icon-refresh
             |  Start over
   canvas#etchasketch
-  .row
-    .span12
-      p This interface is defined in
-        code views/example-walkLED.jade
-        | , all needed JavaScript is stored in
-        code public/scripts/app.walkLED.js
-        |  using
-        a(href="http://requirejs.org/") RequireJS
-        |  for loading dependencies. Please see RequireJS's manual for loading your scripts. Logging is done with the customized
-        code Logger.HTML.js
-        |  in
-        code scripts/libs/
-        | .
-  .row
-    #pot-value-left
-      p Left
-  .row
-    #pot-value-right
-      p Right
+  #turtle
