--- a/views/create.jade
+++ b/views/create.jade
@@ -1,18 +1,24 @@
 header
   .page-header
     h1 Draw something
-
-  .row.debug
-    .span12
-      pre#connection-log
-        .item $ > Not connected to noduino!
-
   .row.interface#controls
     .span12
       .btn-toolbar(style="margin-bottom: 9px")
         .btn-group
+          a.btn(href="javascript:void(0)")#undo
+            i.icon-backward
+            |  Undo
+          a.btn(href="javascript:void(0)")#redo
+            i.icon-forward
+            | Redo
+        .btn-group.pull-right
           a.btn(href="javascript:void(0)")#erase
             i.icon-refresh
             |  Start over
   canvas#etchasketch
   #turtle
+
+  .row.debug
+    .span12
+      pre#connection-log
+        .item $ > Not connected to noduino!
