Added shake to start over.

--- a/views/create.jade
+++ b/views/create.jade
@@ -14,7 +14,7 @@ header
         .btn-group.pull-right
           a.btn(href="javascript:void(0)")#erase
             i.icon-refresh
-            |  Start over
+            |  Shake
   canvas#etchasketch
   #turtle
 
