Renamed fast-forward/rewind buttons.

--- a/views/create.jade
+++ b/views/create.jade
@@ -7,10 +7,10 @@ header
         .btn-group
           a.btn(href="javascript:void(0)")#undo
             i.icon-backward
-            |  Undo
+            |  Rewind
           a.btn(href="javascript:void(0)")#redo
             i.icon-forward
-            | Redo
+            | Fast-forward
         .btn-group.pull-right
           a.btn(href="javascript:void(0)")#erase
             i.icon-refresh
