--- a/public/styles/init.css
+++ b/public/styles/init.css
@@ -2,14 +2,6 @@
 .navbar-fixed-top .brand:hover{text-decoration:none;}
 section{padding-top:60px;}
 hr.soften{height:1px;margin:54px 0;background-image:-webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));background-image:-moz-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));background-image:-ms-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));background-image:-o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));border:0;}
-.jumbotron{position:relative;}
-.jumbotron h1{margin-bottom:9px;font-size:81px;letter-spacing:-1px;line-height:1;}
-.jumbotron p{margin-bottom:18px;font-weight:300;}
-.jumbotron .btn-large{font-size:20px;font-weight:normal;padding:14px 24px;margin-right:10px;-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;}
-.masthead{padding-top:36px;margin-bottom:72px;}
-.masthead h1,.masthead p{text-align:center;}
-.masthead h1{margin-bottom:18px;}
-.masthead p{margin-left:5%;margin-right:5%;font-size:30px;line-height:36px;}
 .subhead{padding-bottom:0;margin-bottom:9px;}
 .subhead h1{font-size:54px;}
 .subnav{width:100%;height:36px;background-color:#eeeeee;background-repeat:repeat-x;background-image:-moz-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0%, #f5f5f5), color-stop(100%, #eeeeee));background-image:-webkit-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);background-image:-ms-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);background-image:-o-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#eeeeee', GradientType=0);background-image:linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);border:1px solid #e5e5e5;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;}
@@ -23,13 +15,6 @@ hr.soften{height:1px;margin:54px 0;background-image:-webkit-linear-gradient(left
 @media (min-width:980px){.subnav-fixed{position:fixed;top:40px;left:0;right:0;z-index:1020;border-color:#d5d5d5;border-width:0 0 1px;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;-webkit-box-shadow:inset 0 1px 0 #ffffff,0 1px 5px rgba(0, 0, 0, 0.1);-moz-box-shadow:inset 0 1px 0 #ffffff,0 1px 5px rgba(0, 0, 0, 0.1);box-shadow:inset 0 1px 0 #ffffff,0 1px 5px rgba(0, 0, 0, 0.1);filter:progid:DXImageTransform.Microsoft.gradient(enabled=false);} .subnav-fixed .nav{width:938px;margin:0 auto;padding:0 1px;} .subnav .nav>li:first-child>a,.subnav .nav>li:first-child>a:hover{-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;}}.quick-links{min-height:30px;padding:5px 20px;margin:36px 0;list-style:none;text-align:center;overflow:hidden;}
 .quick-links li{display:inline;margin:0 5px;color:#999;}
 .quick-links .github-btn,.quick-links .tweet-btn,.quick-links .follow-btn{position:relative;top:5px;}
-.marketing .row{margin-bottom:9px;}
-.marketing h1{margin:36px 0 27px;font-size:40px;font-weight:300;text-align:center;}
-.marketing h2,.marketing h3{font-weight:300;}
-.marketing h2{font-size:22px;}
-.marketing p{margin-right:10px;}
-.marketing .bs-icon{float:left;margin:7px 10px 0 0;opacity:.8;}
-.marketing .small-bs-icon{float:left;margin:4px 5px 0 0;}
 .footer{margin-top:45px;padding:35px 0 36px;border-top:1px solid #e5e5e5;}
 .footer p{margin-bottom:0;color:#555;}
 .show-grid{margin-top:10px;margin-bottom:20px;}
@@ -79,23 +64,11 @@ form.well{padding:14px;}
 .the-icons{margin-left:0;list-style:none;}
 .the-icons i:hover{background-color:rgba(255, 0, 0, 0.25);}
 .bootstrap-examples .thumbnail{margin-bottom:9px;background-color:#fff;}
-@media (max-width:480px){body{padding-top:70px;} h2{margin-top:27px;} h2 small{display:block;line-height:18px;} h3{margin-top:18px;} .jumbotron h1,.jumbotron p{text-align:center;margin-right:0;} .jumbotron h1{font-size:45px;margin-right:0;} .jumbotron p{margin-right:0;margin-left:0;font-size:18px;line-height:24px;} .jumbotron .btn{display:block;font-size:18px;padding:10px 14px;margin:0 auto 10px;} .masthead{padding-top:0;} .quick-links{margin:40px 0 0;} .quick-links .divider{display:none;} .example-sites{margin-left:0;} .example-sites>li{float:none;display:block;max-width:280px;margin:0 auto 18px;text-align:center;} .example-sites .thumbnail>img{max-width:270px;} table code{white-space:normal;word-wrap:break-word;word-break:break-all;} .modal-example .modal{position:relative;top:auto;right:auto;bottom:auto;left:auto;}}@media (max-width:768px){body{padding-top:0;} .jumbotron .btn{margin-bottom:10px;} .subnav{position:static;top:auto;z-index:auto;width:auto;height:auto;background:#fff;-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;} .subnav .nav>li{float:none;} .subnav .nav>li>a{border:0;} .subnav .nav>li+li>a{border-top:1px solid #e5e5e5;} .subnav .nav>li:first-child>a,.subnav .nav>li:first-child>a:hover{-webkit-border-radius:4px 4px 0 0;-moz-border-radius:4px 4px 0 0;border-radius:4px 4px 0 0;} .large-bird{display:none;} .popover-well .popover-wrapper{margin-left:0;} .show-grid [class*="span"]{margin-bottom:5px;} .footer .pull-right{float:none;} .footer p{margin-bottom:9px;}}@media (min-width:480px) and (max-width:768px){.jumbotron h1{font-size:54px;} .jumbotron p{margin-right:0;margin-left:0;}}@media (min-width:768px) and (max-width:980px){body{padding-top:0;} .jumbotron h1{font-size:72px;}}@media (max-width:980px){.navbar-fixed-top .brand{float:left;margin-left:0;padding-left:10px;padding-right:10px;} .quick-links li{display:inline-block;margin:5px;}}@media (min-width:1210px){.subnav-fixed .nav{width:1168px;}}body{position:relative;padding-top:90px;background-color:white;}
-.jumbotron{position:relative;}
-.jumbotron h1{margin-bottom:9px;font-size:81px;letter-spacing:-1px;line-height:1;}
-.jumbotron p{margin-bottom:18px;font-weight:300;}
-.subhead{padding-bottom:0;margin-bottom:9px;}
-.subhead h1{font-size:54px;}
-#homeContent{padding-top:30px;}
-#homeBoxes{padding-top:30px;}
-.example{margin-top:10px;}
-.example .btn{margin-bottom:10px;}
-.response{line-height:28px;margin-left:12px;}
-.response.error{color:red;}
-label.label{display:inline;}
-#e2-secondStep select{margin-right:4px;}
-.exampleLinks{margin-top:8px;}
-.range{margin-bottom:0px;position:relative;top:-9px;margin-left:12px;width:373px;}
-.interval{margin-bottom:0px;position:relative;top:-9px;margin-left:12px;width:60px;}
-.collectedTags{margin-top:14px;}
-#connection-log{height:358px;overflow:hidden;padding-top:4px;overflow-x:hidden;margin-bottom:16px;}
+@media (max-width:480px){h2{margin-top:27px;} h2 small{display:block;line-height:18px;} h3{margin-top:18px;} .jumbotron h1,.jumbotron p{text-align:center;margin-right:0;} .jumbotron h1{font-size:45px;margin-right:0;} .jumbotron p{margin-right:0;margin-left:0;font-size:18px;line-height:24px;} .jumbotron .btn{display:block;font-size:18px;padding:10px 14px;margin:0 auto 10px;} .masthead{padding-top:0;} .quick-links{margin:40px 0 0;} .quick-links .divider{display:none;} .example-sites{margin-left:0;} .example-sites>li{float:none;display:block;max-width:280px;margin:0 auto 18px;text-align:center;} .example-sites .thumbnail>img{max-width:270px;} table code{white-space:normal;word-wrap:break-word;word-break:break-all;} .modal-example .modal{position:relative;top:auto;right:auto;bottom:auto;left:auto;}}@media (max-width:768px){body{padding-top:0;} .jumbotron .btn{margin-bottom:10px;} .subnav{position:static;top:auto;z-index:auto;width:auto;height:auto;background:#fff;-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;} .subnav .nav>li{float:none;} .subnav .nav>li>a{border:0;} .subnav .nav>li+li>a{border-top:1px solid #e5e5e5;} .subnav .nav>li:first-child>a,.subnav .nav>li:first-child>a:hover{-webkit-border-radius:4px 4px 0 0;-moz-border-radius:4px 4px 0 0;border-radius:4px 4px 0 0;} .large-bird{display:none;} .popover-well .popover-wrapper{margin-left:0;} .show-grid [class*="span"]{margin-bottom:5px;} .footer .pull-right{float:none;} .footer p{margin-bottom:9px;}}@media (min-width:480px) and (max-width:768px){.jumbotron h1{font-size:54px;} .jumbotron p{margin-right:0;margin-left:0;}}@media (min-width:768px) and (max-width:980px){body{padding-top:0;} .jumbotron h1{font-size:72px;}}@media (max-width:980px){.navbar-fixed-top .brand{float:left;margin-left:0;padding-left:10px;padding-right:10px;} .quick-links li{display:inline-block;margin:5px;}}@media (min-width:1210px){.subnav-fixed .nav{width:1168px;}}body{position:relative;background-color:white;border:solid 10px gray;}
+.navbar{height:40px;margin-bottom:0;}
+.navbar-inner{height:100%;}
+.container{width:auto;}
+#canvas{width:100%;}
+#controls{position:absolute;z-index:10;top:40px;left:30px;}
+#connection-log{width:auto;height:258px;overflow:hidden;padding-top:4px;overflow-x:hidden;display:none;}
 #turtle{position:absolute;z-index:100;width:15px;height:15px;background-image:url('../images/turtle.png');}
