--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,23 +7,20 @@ html(lang="en")
     link(rel="stylesheet", href="styles/init.css")
     // Dynamically include template-defined scripts.
     if ( typeof( script ) != 'undefined' )
-    script(data-main="scripts/#{script}", type="text/javascript", src="scripts/vendor/require-jquery.js")
+      script(data-main="scripts/#{script}", type="text/javascript", src="scripts/vendor/require-jquery.js")
     script(type="text/javascript", src="http://localhost:8090/socket.io/socket.io.js")
   body
-    .navbar.navbar-fixed-top(style="z-index: 4;position:absolute;")
+    .navbar
       .navbar-inner
-        .container
-          div.nav-collapse
+        div.nav-collapse
+          ul.nav
+            li
+              a(href="/") Line
+            li
+              a(href="/about") About
+          div.nav-collapse.pull-right
             ul.nav
               li
-                a(href="/") Gallery
-              li
-                a(href="/create") Create
-              li
-                a(href="/about") About
-            div.nav-collapse.pull-right
-              ul.nav
-                li
-                  a(href="http://www.leftfieldlabs.com") LFL
+                a(href="http://www.leftfieldlabs.com") LFL
 
     .container!=body
